--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -10,30 +10,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../assets/styles/normalize.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <header>
-        <div class="menu-bar">
-            <div class="center container menu-bar-flexbox">
-                <div class="header-logo">
-                    <img src="../../assets/images/png/logo_footer.png" alt="logo">
+        <div class="header-background">
+            <div class="menu-bar">
+                <div class="center container menu-bar-flexbox">
+                    <div class="header-logo">
+                        <img src="../../assets/images/png/logo_footer.png" alt="logo">
+                    </div>
+                    <div class="header-navigation">
+                        <nav>
+                            <ul class="nav-inline">
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Map</a></li>
+                                <li><a href="#">Zoos</a></li>
+                                <li><a href="#">Donate</a></li>
+                                <li><a href="#">Contact us</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="header-rights">
+                        <p>Designed by ©</p>
+                    </div>
                 </div>
-                <div class="header-navigation">
-                    <nav>
-                        <ul class="nav-inline">
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Map</a></li>
-                            <li><a href="#">Zoos</a></li>
-                            <li><a href="#">Donate</a></li>
-                            <li><a href="#">Contact us</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="header-rights">
-                    <p>Designed by ©</p>
+            </div>
+            <div class="center container header-container">
+                <div class="header-circle">
+                    <div class="title-content">
+                        <h1>Watch<br>Your<br><span class="title-selection">Favorite</span><br>Animal<br>Online</h1>
+                    </div>
+                    <div class="button-watch">
+                        <button type="button" class="button-watch-text">
+                            Watch Online
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+    <main>
+        <div>
+            <p>Backstage</p>
+        </div>
+    </main>
 </body>
 </html>
