feat: add link into nav bar

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -32,7 +32,7 @@
                         </nav>
                     </div>
                     <div class="header-rights">
-                        <p>Designed by ©</p>
+                        <p><a href="https://www.figma.com/file/ypzT9idgAILaSRVRmDAJxn/online-zoo-3-weeks">Designed by ©</a></p>
                     </div>
                 </div>
             </div>
