feat: add cards and backstage section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header-background">
             <div class="menu-bar">
-                <div class="center container menu-bar-flexbox">
+                <div class="container menu-bar-flexbox">
                     <div class="header-logo">
                         <img src="../../assets/images/png/logo_footer.png" alt="logo">
                     </div>
@@ -51,9 +51,112 @@
         </div>
     </header>
     <main>
-        <div>
-            <p>Backstage</p>
-        </div>
+        <section class="backstage-section">
+            <div class="container backstage-content">
+                <div>
+                    <img src="../../assets/images/jpeg/bamboo-cap.jpg" alt="bamboo-cap">
+                </div>
+                <div class="backstage-content-text">
+                    <div class="backstage-title">
+                        <h2>The Backstage of the Wilderness World.</h2>
+                    </div>
+                    <div class="backstage-description">
+                        <p>The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                    </div>
+                    <div class="backstage-sub-title">
+                        <h3>How it works </h3>
+                    </div>
+                    <div class="backstage-sub-description">
+                        <p>The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cards-section">
+            <div class="cards-background">
+                <div class="cards-frame">
+                    <div class="arrow-block arrow-left">
+                        <img src="../../assets/icons/arrow-left.svg" alt="left" class="arrow-sign">
+                    </div>
+                    <div class="container">
+                        <div class="grid-cards">
+                            <!-- Card 1 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card1.jpg" alt="card1">
+                                <div class="card-container">
+                                    <h4>Giant Pandas</h4>
+                                    <p>Native to Southwest China</p>
+                                </div>
+                            </div>
+                            <!-- Card 2 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card2.jpg" alt="card2">
+                                <div class="card-container">
+                                    <h4>Eagles</h4>
+                                    <p>Native to South America</p>
+                                </div>
+                            </div>
+                            <!-- Card 3 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card3.jpg" alt="card3">
+                                <div class="card-container">
+                                    <h4>Gorillas</h4>
+                                    <p>Native to Congo</p>
+                                </div>
+                            </div>
+                            <!-- Card 4 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card4.jpg" alt="card4">
+                                <div class="card-container">
+                                    <h4>Two-toed Sloth</h4>
+                                    <p>Mesoamerica, South America</p>
+                                </div>
+                            </div>
+                            <!-- Card 5 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card5.jpg" alt="card5">
+                                <div class="card-container">
+                                    <h4>Cheetahs</h4>
+                                    <p>Native to Africa</p>
+                                </div>
+                            </div>
+                            <!-- Card 6 -->
+                            <div class="card">
+                                <img src="../../assets/images/jpeg/card6.jpg" alt="card6">
+                                <div class="card-container">
+                                    <h4>Penguins</h4>
+                                    <p>Native to Antarctica</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="arrow-block arrow-right">
+                        <img src="../../assets/icons/arrow-right.svg" alt="right" class="arrow-sign">
+                    </div>
+                </div>
+                <div class="button-cards">
+                    <button type="button" class="button-cards-text">
+                        Choose Your Favorite
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="feed-section">
+            <div class="container">
+                <div>
+                    <h5>Pick and feed a friend</h5>
+                </div>
+                <div>
+                    <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                </div>
+                <div>
+                    <p>During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+                </div>
+                <div>
+                    <p>Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund .</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
