--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -23,11 +23,11 @@
                     <div class="header-navigation">
                         <nav>
                             <ul class="nav-inline">
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Map</a></li>
-                                <li><a href="#">Zoos</a></li>
-                                <li><a href="#">Donate</a></li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="" id="about">About</a></li>
+                                <li><a href="" id="map">Map</a></li>
+                                <li><a href="" id="zoo">Zoos</a></li>
+                                <li><a href="" id="donate">Donate</a></li>
+                                <li><a href="" id="contact-us">Contact us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -143,20 +143,227 @@
         </section>
         <section class="feed-section">
             <div class="container">
-                <div>
-                    <h5>Pick and feed a friend</h5>
+                <div class="feed-content">
+                    <div class="feed-title-first">
+                        <h5>Pick and feed a friend</h5>
+                    </div>
+                    <div class="feed-description feed-first">
+                        <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                    </div>
+                    <div class="feed-description feed-second">
+                        <p>During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+                    </div>
+                    <div class="feed-description feed-third">
+                        <p>Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund .</p>
+                    </div>
+                    <div class="feed-cards">
+                        <div class="feed-title-second">
+                            <h5>How it works</h5>
+                        </div>
+                        <div class="feed-cards-section">
+                            <div class="feed-card div1">
+                                <div class="feed-card-img">
+                                    <img src="../../assets/icons/pay.png" alt="pay">
+                                </div>
+                            </div>
+                            <div class="feed-card-desc div6">
+                                <p>Pay with card</p>
+                            </div>
+                            <div class="vector div2">
+                                <img src="../../assets/icons/Vector.png" alt="arrow">
+                            </div>
+                            <div class="feed-card div3">
+                                <div class="feed-card-img">
+                                    <img src="../../assets/icons/zoo.png" alt="zoo">
+                                </div>
+                            </div>
+                            <div class="feed-card-desc div7">
+                                <p>Payment goes to the zoo</p>
+                            </div>
+                            <div class="vector div4">
+                                <img src="../../assets/icons/Vector.png" alt="arrow">
+                            </div>
+                            <div class="feed-card div5">
+                                <div class="feed-card-img">
+                                    <img src="../../assets/icons/monkey.png" alt="monkey">
+                                </div>
+                            </div>
+                            <div class="feed-card-desc div8">
+                                <p>Your favourite animal gets delicious dish</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feed-button">
+                        <button type="button" class="feed-button-text">
+                            Feed a friend now
+                        </button>
+                    </div>
                 </div>
-                <div>
-                    <p>We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
-                </div>
-                <div>
-                    <p>During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-                </div>
-                <div>
-                    <p>Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our Emergency Support Fund .</p>
+            </div>
+        </section>
+
+        <section class="testimonials-section">
+            <div class="testimonials-background">
+                <div class="container">
+                    <div class="testimonials-title">
+                        <h5>Testimonials</h5>
+                    </div>
+                    <div class="testimonials-cards">
+                        
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-background">
+                                <div class="testimonial-card-header">
+                                    <div class="testimonial-card-icon">
+                                        <img src="../../assets/images/png/Testimonials1.png" alt="Icn1">
+                                    </div>
+                                    <div class="testimonial-card-head">
+                                        <div class="testimonial-card-title">
+                                            <p>Michael John</p>
+                                        </div>
+                                        <div class="testimonial-card-note">
+                                            <p>Local Austria • <span>Today</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-desc">
+                                    <p>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-background">
+                                <div class="testimonial-card-header">
+                                    <div class="testimonial-card-icon">
+                                        <img src="../../assets/images/png/Testimonials2.png" alt="Icn2">
+                                    </div>
+                                    <div class="testimonial-card-head">
+                                        <div class="testimonial-card-title">
+                                            <p>Oskar Samborsky</p>
+                                        </div>
+                                        <div class="testimonial-card-note">
+                                            <p>Local Austria • <span>Yesterday</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-desc">
+                                    <p>Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. <br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-background">
+                                <div class="testimonial-card-header">
+                                    <div class="testimonial-card-icon">
+                                        <img src="../../assets/images/png/Testimonials3.png" alt="Icn3">
+                                    </div>
+                                    <div class="testimonial-card-head">
+                                        <div class="testimonial-card-title">
+                                            <p>Fredericka Michelin</p>
+                                        </div>
+                                        <div class="testimonial-card-note">
+                                            <p>Local Austria • <span>Yesterday</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-desc">
+                                    <p>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.<br>The best online zoo I’ve met. My son delighted very much ljves to</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="testimonial-card">
+                            <div class="testimonial-card-background">
+                                <div class="testimonial-card-header">
+                                    <div class="testimonial-card-icon">
+                                        <img src="../../assets/images/png/Testimonials4.png" alt="Icn4">
+                                    </div>
+                                    <div class="testimonial-card-head">
+                                        <div class="testimonial-card-title">
+                                            <p>Mila Riksha</p>
+                                        </div>
+                                        <div class="testimonial-card-note">
+                                            <p>Local Austria • <span>Yesterday</span></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="testimonial-card-desc">
+                                    <p>My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                        <br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf</p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="testimonial-scroll">
+                        <input type="range" class="range" min="0" max="100" value="0">
+                    </div>
+                    <div class="testimonials-button">
+                        <button type="button" class="testimonials-button-text">
+                            Leave Feedback
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-background">
+            <div class="container">
+                <div class="footer_top">
+                    <div class="header-logo">
+                        <img src="../../assets/images/png/logo_footer.png" alt="logo">
+                    </div>
+                    <form>
+                        <label for="email">Subscribe to our news</label><br/>
+                        <input type="email" id="email" placeholder="Enter your email">
+                        <input type="submit" value="Submit">
+                    </form>
+                </div>
+                <button class="footer_donate">DONATE FOR VOLUNTEERS</button>
+                <div class="footer_bottom">
+                    <div class="socials">
+                        <a href="https://www.facebook.com/">
+                        <div class="socials_logo">
+                            <img src="../../assets/icons/facebook.svg" alt="facebook logo">
+                        </div>
+                        <h5>Facebook</h5>
+                        </a>
+                        <a href="https://www.twitter.com/">
+                        <div class="socials_logo">
+                            <img src="../../assets/icons/twitter.svg" alt="twitter logo">
+                        </div>
+                        <h5>Twitter</h5>
+                        </a>
+                        <a href="https://www.instagram.com/">
+                        <div class="socials_logo">
+                            <img src="../../assets/icons/instagram.svg" alt="instagram logo">
+                        </div>
+                        <h5>Instagram</h5>
+                        </a>
+                        <a href="https://www.youtube.com/">
+                        <div class="socials_logo">
+                            <img src="../../assets/icons/youtube.svg" alt="youtube logo">
+                        </div>
+                        <h5>Youtube</h5>
+                        </a>
+                    </div>
+                    <nav>
+                        <ul>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Map</a></li>
+                        <li><a href="">Zoos</a></li>
+                        <li><a href="">Contact Us</a></li>
+                        </ul>
+                    </nav> 
+                    <div class="copyright">
+                        <h4>Designed by Alisa Samborskaya</h4>
+                        <h4>©RSSchool & ©Yem Digital 2021</h4>
+                    </div>
+                </div>
+              </div>
+        </div>
+    </footer>
 </body>
 </html>
