feat: add all content

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -26,7 +26,7 @@
                                 <li><a href="" id="about">About</a></li>
                                 <li><a href="" id="map">Map</a></li>
                                 <li><a href="" id="zoo">Zoos</a></li>
-                                <li><a href="" id="donate">Donate</a></li>
+                                <li><a href="../donate/" id="donate">Donate</a></li>
                                 <li><a href="" id="contact-us">Contact us</a></li>
                             </ul>
                         </nav>
